updated with responsive design

--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
         </p>
     </section>
 
-    <section class="container-fluid casts">
+    <section class="container-fluid">
         <h1>Casts</h1>
         
-            <p><span>MELISSA HUGHES</span> - Founder - Live Rich Spread Wealth Movement</p>
-            <p><span>ROD GAMBLE</span> - International Consultant & Entrepreneur</p>
-            <p><span>DOREEN RAINEY</span> - Operations Steve Harvey Worldwide, Tyler New Media, Entrepreneur, Coach</p>
-            <p><span>TONYA BREWINGTON</span> - Strategist, Entrepreneur, Coach</p>
-            <p><span>NADIA GALLOWAY</span> - Inventor, Winner -  "Billion Dollar Idea", Sister</p>
-            <p><span>ANGELA DURANT</span> - Brand Strategist, Entrepreneur, Coach</p>
-            <p><span>MARIA PURAS</span> - Consultant, Speaker, Coach</p>
-            <p><span>SHARON ADDISON,RN</span> - Coach, Entrepreneur, RN G</p>
-            <p><span>GEORGINA TERRY</span> - Coach, Author</p>
-            <p><span>KIMBERLY CRISWELL</span> - Executive, Best Friend</p>
-            <p><span>BRANDI MITCHELL</span> - Producer, Director, President KORIS Media</p>
-            <p><span>ANGELO HUGHES</span> - Project Manager, Husband </p>
-            <p><span>ANGELISA HUGHES</span> - Daughter</p>
+        <p><span>MELISSA HUGHES</span> - Founder - Live Rich Spread Wealth Movement</p>
+        <p><span>ROD GAMBLE</span> - International Consultant & Entrepreneur</p>
+        <p><span>DOREEN RAINEY</span> - Operations Steve Harvey Worldwide, Tyler New Media, Entrepreneur, Coach</p>
+        <p><span>TONYA BREWINGTON</span> - Strategist, Entrepreneur, Coach</p>
+        <p><span>NADIA GALLOWAY</span> - Inventor, Winner -  "Billion Dollar Idea", Sister</p>
+        <p><span>ANGELA DURANT</span> - Brand Strategist, Entrepreneur, Coach</p>
+        <p><span>MARIA PURAS</span> - Consultant, Speaker, Coach</p>
+        <p><span>SHARON ADDISON,RN</span> - Coach, Entrepreneur, RN G</p>
+        <p><span>GEORGINA TERRY</span> - Coach, Author</p>
+        <p><span>KIMBERLY CRISWELL</span> - Executive, Best Friend</p>
+        <p><span>BRANDI MITCHELL</span> - Producer, Director, President KORIS Media</p>
+        <p><span>ANGELO HUGHES</span> - Project Manager, Husband </p>
+        <p><span>ANGELISA HUGHES</span> - Daughter</p>
         
         <div>
-            <p>About Melissa Hughes
+            <p>About <span>Melissa Hughes</span>
                 A self-made millionaire by 31, Melissa Hughes is the founder of the Live Rich. Spread Wealth. Global Movement and a master business coach, 
                 best-selling author, international speaker, and consultant. Her mission is to help entrepreneurs and individuals accomplish 
                 their business goals (including massive profits) while staying connected to their authentic self and divine purpose, transforming the world, 
                 and creating lives of limitless abundance. Melissa, a wife and mom of a seven-year-old global citizen, has worked with leaders, trailblazers, and entrepreneurs worldwide.
             </p>
             <p>
-                About Brandi Mitchell
+                About <span>Brandi Mitchell</span>
                 Brandi Mitchell is the owner of KORIS Media and KORIS Studio. This multi-faceted media company monetizes the messages, intellectual property, and personas of great brands 
                 to its audience through high-caliber content in television, film, print, and digital media. Brandi, a filmmaker and four-time author, 
                 holds a degree in psychology from Florida A&M University. She’s a sought-after trainer and speaker, teaching groups and entrepreneurs how to 
@@ -85,7 +85,7 @@
                 development space and catapulted visionary leaders worldwide.
             </p>
             <p>
-                About the ALBERT AND PEARL BENJAMIN FOUNDATION
+                About the <span>ALBERT AND PEARL BENJAMIN FOUNDATION</span>
                 The Benjamins Foundation will be a philanthropic partner on the Live Rich Spread Wealth film premiere. A portion of the film premiere proceeds will go to 
                 the support of providing scholarships in partnership with the foundation.
             </p>
